# pullwise-worker

./: .ci-cookies  .ci-job.html  .codex-doc-fixes.patch  .codex-temp-repair.patch  .codex-temp-repair2.patch  .codex-temp-repair3.patch  .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  requirements-audit.txt  setup.py
.codereview/: config.json
.sisyphus/: audit-swarm-output.json
codereview/: __init__.py  __main__.py  app_server_runner.py  codegraph_adapter.py  codex_runner.py  config.py  context_adapter.py  main.py  repo.py  simple_review.py  templates.py
deploy/: cleanup-checkouts.sh  install-worker.sh  logrotate.conf  pullwise-worker.service  restart-worker.sh  uninstall-worker.sh  update-worker.sh  worker.env.template
docs/: agent-first-worker-current-code-map.md  agent-first-worker-design.md  agent-first-worker-mvp-implementation-design.md  agent-first-worker-mvp-implementation-design.md.rej  agent-first-worker-post-mvp-implementation-design.md  agent-first-worker-post-mvp-implementation-design.md.rej  agent-first-worker-slice-1-runbook.md  agent-first-worker-slice-2-runbook.md  agent-first-worker-slice-3a-runbook.md  agent-first-worker-spec-decision-register.md  agentic-intent-test-execution.md  review-worker-validation-binding.md  simple-review-engine.md
pullwise_worker/: _generated_agent_task_contract.py  _main_part_01_bootstrap.py  _main_part_02_worker_checkout.py  _main_part_03_preflight.py  _main_part_03_preflight_verifier.py  _main_part_04_graph_verified_review.py  _main_part_04_review_audit_swarm.py  _main_part_05_reportability_convergence.py  _main_part_06_audit_artifacts.py  _main_part_07_readiness_doctor.py  _main_part_08_lifecycle_cleanup.py  _main_part_09_review_calibration.py  _main_part_10_repository_graph.py  agent_kernel_attempt_store.py  agent_kernel_canonical.py  agent_kernel_checkout_lifecycle.py  agent_kernel_checkout_lock.py  agent_kernel_checkout_window.py  (+55 more)
(+251 files in other folders)
