[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pullwise-worker"
version = "0.10.9"
description = "Pullwise pull-based scan worker"
requires-python = ">=3.10"
# The worker uses OpenAI's Codex Python SDK for automation while still
# pinning Codex runtime state to the worker-scoped service home.
dependencies = [
    "openai-codex",
]

[project.scripts]
pullwise-worker = "pullwise_worker.main:main"

[tool.setuptools.packages.find]
include = ["pullwise_worker"]

