[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pullwise-worker"
version = "0.10.20"
description = "Pullwise pull-based scan worker"
requires-python = ">=3.10"
# The worker pins the validated Codex SDK; upgrade it deliberately with the
# runtime-contract and real-integration tests.
dependencies = [
    "openai-codex==0.1.0b3",
]

[project.scripts]
pullwise-worker = "pullwise_worker.main:main"

[tool.setuptools.packages.find]
include = ["pullwise_worker"]

